# LLMCORTEX

./: .gitignore  BENCHMARKS.md  CHANGELOG.md  CONTRIBUTING.md  ONBOARDING.md  README.md  STRUCTURE.md  pyproject.toml
.github/workflows/: ci.yml
cortex/: __init__.py  bench.py  classify.py  cli.py  dmn.py  fitness.py  hook.py  inbox.py  promoter.py  promoter_prompt.py  session.py  skills_install.py  stats.py  stemmer_ru.py  store.py  suggest_patterns.py  surprise.py  synthesize.py  tfidf_fallback.py  tokenize.py  verify_runner.py  violation_detect.py  watch.py
cortex/importers/: __init__.py  memory_md.py
cortex/rules/: generic.yml  polymarket.yml
cortex/skills/cortex-bootstrap/: SKILL.md
cortex/skills/cortex-capture-lesson/: SKILL.md
cortex/skills/cortex-search/: SKILL.md
cortex/skills/cortex-status/: SKILL.md
cortex/skills/cortex-tune/: SKILL.md
cortex/verifiers/: __init__.py  check_feature_lookahead.py
docs/: architecture.md  authoring.md  hooks.md
docs/blog/: 2026-04-11-the-36x-ratio.md
tests/: test_bench.py  test_classify.py  test_cli_status.py  test_dmn.py  test_fitness.py  test_hook.py  test_importer.py  test_inbox.py  test_promoter.py  test_promoter_integration.py  test_session.py  test_skills_install.py  test_stats.py  test_store.py  test_suggest_patterns.py  test_suggest_patterns_regex.py  test_surprise.py  test_synthesize.py  test_tfidf_fallback.py  test_tokenize.py  test_verifier_lookahead.py  test_verify_runner.py  test_violation_detect.py  test_watch.py
