[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
# NOTE: the PyPI distribution name is `llmcortex-agent` (matching the
# GitHub repo slug + the "agent" suffix of the import package). The
# import name is still `cortex` — so users do
# `pip install llmcortex-agent` but `from cortex.cli import main`. This
# is standard practice for packages whose obvious name was taken on
# PyPI (in our case `cortex-agent` is claimed by an unrelated project
# about web cartography).
name = "llmcortex-agent"
version = "0.1.0"
description = "Active memory and executive control for AI coding agents. Classifies user prompts against a curated tripwire store, injects the matched lessons into the agent's working context via a Claude Code UserPromptSubmit hook, before the agent reasons about the task."
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [{name = "Cortex contributors"}]
keywords = [
    "agent",
    "memory",
    "llm",
    "claude",
    "claude-code",
    "hooks",
    "tripwires",
    "active-memory",
    "prompt-injection",
    "cost-synthesis",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Software Development :: Quality Assurance",
    "Topic :: Utilities",
]
dependencies = [
    "pyyaml>=6.0",
]

[project.urls]
Homepage = "https://github.com/jimbokl/LLMCORTEX"
Repository = "https://github.com/jimbokl/LLMCORTEX"
Issues = "https://github.com/jimbokl/LLMCORTEX/issues"
Changelog = "https://github.com/jimbokl/LLMCORTEX/blob/main/CHANGELOG.md"
Documentation = "https://github.com/jimbokl/LLMCORTEX/tree/main/docs"

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "ruff>=0.3.0",
]
dmn = [
    "anthropic>=0.40",
]

[project.scripts]
cortex = "cortex.cli:main"
cortex-hook = "cortex.hook:main"
cortex-watch = "cortex.watch:main"
cortex-check-lookahead = "cortex.verifiers.check_feature_lookahead:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["cortex*"]

[tool.setuptools.package-data]
cortex = ["rules/*.yml"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "W", "UP", "B", "SIM"]
ignore = ["E501", "SIM103"]  # SIM103: explicit `return False / return True` is clearer than inverted booleans

[tool.pytest.ini_options]
testpaths = ["tests"]
